Added workflow for Backend Deploy to Azure service

--- a/backend/KanbanAPI/appsettings.json
+++ b/backend/KanbanAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "KanbanDb": "Server=kanban-mysql-aditya.mysql.database.azure.com; Database=kanban_prod; User Id=kanban_user;Password=PlaYgr0up; SslMode=Required;"
+  }
 }
