--- a/backend/KanbanAPI/appsettings.json
+++ b/backend/KanbanAPI/appsettings.json
@@ -6,7 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "KanbanDb": "Server=kanban-mysql-aditya.mysql.database.azure.com; Database=kanban_prod; User Id=kanban_user;Password=PlaYgr0up; SslMode=Required;"
-  }
+  "ConnectionStrings": {"KanbanDb"}
 }
